# AEScrypt_Python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirements_gui.txt
gui/src/: functions.py  main.py  requirements_gui.txt  window.py
linux/: install.sh
modules/: __init__.py  functions.py  gui.py  window.py
resources/: info.txt
src/: main.py  old_main.py
